wordpress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress
  annotations:
#   cert-manager.io/cluster-issuer: cloud-letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: blog.my-website.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress
            port:
              number: 80
#  tls:
#  - hosts:
#    - blog.my-website.id
#    secretName: blog-my-website-secret
